--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                                     <div>Meh, he whatever. Needs to hit the gym more lmfaaao. Jk Jk</div>
                                     <p>
                                         <br>
-                                        <a href="https://github.com/sofwanmd13">LinkedIn</a>
+                                        <a href="https://www.linkedin.com/in/abul-boyan-mohammed-sofwan-a907ab172/">LinkedIn</a>
                                 </div>
                             </div>
                         </div>
