minor changes to mobile version menu

--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-8">
                     <div class="header-right">
-                        <div class="connect-group-sm">
+                        <!--<div class="connect-group-sm">
                             <button type="button" class="btn-default btn-small round btn-connect-simple" onclick="connect()">
                                 <div>Sign Up/ Login</div>
                             </button>
-                        </div>
+                        </div>-->
                         <button class="hamberger" onclick="toggleMenu()">
                             <div>
-                                <img src="assets/hamberger-dark.svg" alt="" class="logo-dark">
-                                <img src="assets/hamberger.svg" alt="" class="logo-light">
+                                <img src="https://www.svgrepo.com/show/5186/menu.svg" alt="" class="logo-dark">
+                                <img src="https://www.svgrepo.com/show/5186/menu.svg" alt="" class="logo-light">
                             </div>
                         </button>
                     </div>
@@ -184,23 +184,23 @@
                     <div class="d-flex justify-content-between align-items-end">
                         <ul class="nav nav-pills nav-flush text-center nav-socials">
                             <li>
-                                <a href="https://twitter.com/BlitzLabs_io" title="WeGoGym on Twitter" rel="nofollow" target="_blank">
+                                <a href="" title="WeGoGym on Twitter" rel="nofollow" target="_blank">
                                     <i class="fa-brands fa-twitter"></i>
                                 </a>
                             <li>
-                                <a href="https://t.me/BlitzLabs" title="WeGoGym on Instagram" rel="nofollow" target="_blank">
+                                <a href="" title="WeGoGym on Instagram" rel="nofollow" target="_blank">
                                     <i class="fa-brands fa-instagram"></i>
                                 </a>
                             <li>
-                                <a href="https://discord.gg/blitzlabs" title="WeGoGym on Facebook" rel="nofollow" target="_blank">
+                                <a href="" title="WeGoGym on Facebook" rel="nofollow" target="_blank">
                                     <i class="fa-brands fa-facebook"></i>
                                 </a>
                             <li>
-                                <a href="https://medium.com/@BlitzLabs.io" title="WeGoGym on Medium" rel="nofollow" target="_blank">
+                                <a href="" title="WeGoGym on Medium" rel="nofollow" target="_blank">
                                     <i class="fa-brands fa-medium"></i>
                                 </a>
                             <li>
-                                <a href="mailto: wegogym@yahoo.com" title="WeGoGym Email">
+                                <a href="mailto: wegogym@yahoo.com" title="WeGoGym Email" rel="nofollow" target="_blank">
                                     <i class="fa fa-envelope" aria-hidden="true"></i>
                                 </a>
                         </ul>
@@ -228,10 +228,10 @@
                                 <span class="home-ar" data-scroll data-scroll-speed="0.1" data-scroll-direction="vertical">
                                     <span data-scroll data-scroll-speed="-0.5" data-scroll-direction="horizontal">ARE</span>
                                 </span>
-                                <span class="home-bl" data-scroll data-scroll-speed="-1" data-scroll-direction="vertical">
+                                <span class="home-wgg" data-scroll data-scroll-speed="-1" data-scroll-direction="vertical">
                                     <span data-scroll data-scroll-speed="1" data-scroll-direction="horizontal">WeGoGym</span>
                                 </span>
-                                <span class="home-la" data-scroll data-scroll-speed="-1.5" data-scroll-direction="vertical">
+                                <span class="home-fit" data-scroll data-scroll-speed="-1.5" data-scroll-direction="vertical">
                                     <span data-scroll data-scroll-speed="-0.4" data-scroll-direction="horizontal">Fitness</span>
                                 </span>
                             </h1>
