--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                                         <img src="https://i.pinimg.com/originals/62/dc/45/62dc45b6df4a9c7aaf74471af415186d.jpg" alt="sofwan1.jpg" class="imgB">
                                     </div>
                                     <h2>A.B.M. SOFWAN</h2>
-                                    <h6>COO and Lead Backend Developer</h6>
+                                    <h6>COO and Lead FullStack Developer</h6>
                                     <div>The cool guy on the team. Lets Goooo!!</div>
                                     <p>
                                         <br>
