--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                                         <img src="https://i.pinimg.com/originals/4f/b9/36/4fb936e6c749b90580e39f9f2cfbf80d.jpg" alt="ahsem1.jpg" class="imgB">
                                     </div>
                                     <h2>ASM GONI</h2>
-                                    <h6>CEO and Lead Frontend Developer</h6>
+                                    <h6>CEO and Lead Backend Developer</h6>
                                     <div>Meh, he whatever. Needs to hit the gym more lmfaaao. Jk Jk</div>
                                     <p>
                                         <br>
