finalized Updated roadmap

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                     <div class="header-left d-flex">
                         <div class="logo">
                             <a href="./" class="blitz-logo-left">
-                                <img class="logo-light logo-height" src="assets/Blitz.svg" alt="Blitz Logo">
-                                <img class="logo-dark logo-height" src="assets/Blitz-dark.svg" alt="Blitz Logo">
+                                <img class="logo-light logo-height" src="https://i.kym-cdn.com/entries/icons/original/000/031/015/cover5.jpg" alt="WeGoGym Logo">
+                                <img class="logo-dark logo-height" src="https://i.kym-cdn.com/entries/icons/original/000/031/015/cover5.jpg" alt="WeGoGym Logo">
                             </a>
                         </div>
                     </div>
@@ -115,23 +115,23 @@
         </a>
         <ul class="nav nav-pills nav-flush flex-column text-center nav-socials d-none d-md-flex mb-3">
             <li>
-                <a href="https://twitter.com/BlitzLabs_io" title="WeGoGym on Twitterr" rel="nofollow" target="_blank">
+                <a href="" title="WeGoGym on Twitterr" rel="nofollow" target="_blank">
                     <i class="fa-brands fa-twitter"></i>
                 </a>
             <li>
-                <a href="https://t.me/BlitzLabs" title="WeGoGym on Instagram" rel="nofollow" target="_blank">
+                <a href="" title="WeGoGym on Instagram" rel="nofollow" target="_blank">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             <li>
-                <a href="https://discord.gg/blitzlabs" title="WeGoGym on Facebook" rel="nofollow" target="_blank">
+                <a href="" title="WeGoGym on Facebook" rel="nofollow" target="_blank">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
             <li>
-                <a href="https://medium.com/@BlitzLabs.io" title="WeGoGym on Medium" rel="nofollow" target="_blank">
+                <a href="" title="WeGoGym on Medium" rel="nofollow" target="_blank">
                     <i class="fa-brands fa-medium"></i>
                 </a>
             <li>
-                <a href="mailto: wegogym@yahoo.com" title="WeGoGym Email">
+                <a href="mailto: wegogym@yahoo.com" title="WeGoGym Email" rel="nofollow" target="_blank">
                     <i class="fa fa-envelope" aria-hidden="true"></i>
                 </a>
         </ul>
@@ -148,8 +148,8 @@
                     <div>
                         <div class="header-top">
                             <a href="./" class="blitz-logo-left">
-                                <img class="logo-light logo-height" src="assets/Blitz.svg" alt="WeGoGym Logo">
-                                <img class="logo-dark logo-height" src="assets/Blitz-dark.svg" alt="Blitz Logo">
+                                <img class="logo-light logo-height" src="https://i.kym-cdn.com/entries/icons/original/000/031/015/cover5.jpg" alt="WeGoGym Logo">
+                                <img class="logo-dark logo-height" src="https://i.kym-cdn.com/entries/icons/original/000/031/015/cover5.jpg" alt="WeGoGym Logo">
                             </a>
                             <button onclick="daynight()" data-theme="light" class="daynight setColor light btn btn-link">
                                 <div>
@@ -451,10 +451,10 @@
                     <div class="col-lg-12">
                         <div class="section-title text-center sal-animate" data-sal="slide-up" data-sal-duration="400" data-sal-delay="150">
                             <h2>
-                                WeGoGym<span style="font-weight:400">ROADMAP</span>
+                                WeGoGym <span style="font-weight:400">ROADMAP</span>
                             </h2>
-                            <div>The roadmap currently contains primarily our main short- and medium-term plans, as well as high-priority tasks.</div>
-                            <div>As new products are introduced, the roadmap will be updated.</div>
+                            <div>The WeGoGym roadmap is a 12-stage plan that outlines the development and launch of the app, from ideation to expansion. It serves as a guide to align efforts towards the goal of launching a successful app and ensures that activities and resources are prioritized effectively.</div>
+                            <div>Ultimately, the roadmap is essential for planning, execution, and evaluation of the project, leading to the achievement of WeGoGym's goal of becoming the ultimate workout app for fitness enthusiasts.</div>
                         </div>
                     </div>
                 </div>
@@ -471,7 +471,7 @@
                                             </div>
                                         </div>
                                         <div class="description">
-                                            <p>MVP Development<br>
+                                            <p>Conceptualization<br>
                                         </div>
                                     </div>
                                 </div>
@@ -484,7 +484,7 @@
                                             </div>
                                         </div>
                                         <div class="description">
-                                            <p>Website Launch<br>
+                                            <p>Market Research<br>
                                         </div>
                                     </div>
                                 </div>
@@ -497,7 +497,7 @@
                                             </div>
                                         </div>
                                         <div class="description">
-                                            <p>Pre-Seed Funding<br>
+                                            <p>MVP Development<br>
                                         </div>
                                     </div>
                                 </div>
@@ -510,7 +510,7 @@
                                             </div>
                                         </div>
                                         <div class="description">
-                                            <p>Marketing Campaign<br>
+                                            <p>User Testing<br>
                                         </div>
                                     </div>
                                 </div>
@@ -525,7 +525,7 @@
                                             </div>
                                         </div>
                                         <div class="description">
-                                            <p>App Development Completion<br>
+                                            <p>Website Launch<br>
                                         </div>
                                     </div>
                                 </div>
@@ -538,7 +538,7 @@
                                             </div>
                                         </div>
                                         <div class="description">
-                                            <b>WeGoGym</b> Launch &nbsp;<br>
+                                            <p>Pre-Seed Funding<br>
                                         </div>
                                     </div>
                                 </div>
@@ -551,7 +551,7 @@
                                             </div>
                                         </div>
                                         <div class="description">
-                                            <p>Seed Funding<br>
+                                            <p>Marketing Campaign<br>
                                         </div>
                                     </div>
                                 </div>
@@ -564,7 +564,7 @@
                                             </div>
                                         </div>
                                         <div class="description">
-                                            <p>App Development Stage 2<br>
+                                            <p>App Development Completion<br>
                                         </div>
                                     </div>
                                 </div>
@@ -579,7 +579,7 @@
                                             </div>
                                         </div>
                                         <div class="description">
-                                            <p>AI Features<br>
+                                            <b>WeGoGym</b> Launch &nbsp;<br>
                                         </div>
                                     </div>
                                 </div>
@@ -592,7 +592,7 @@
                                             </div>
                                         </div>
                                         <div class="description">
-                                            <p>Premium Membership features<br>
+                                            <p>Seed Funding<br>
                                         </div>
                                     </div>
                                 </div>
@@ -605,7 +605,7 @@
                                             </div>
                                         </div>
                                         <div class="description">
-                                            <p>Early Stage Funding
+                                            <p>Premium Membership features<br>
                                         </div>
                                     </div>
                                 </div>
@@ -618,7 +618,7 @@
                                             </div>
                                         </div>
                                         <div class="description">
-                                            <p>Late Stage Funding
+                                            <p>Early and Late Stage Funding<br>
                                         </div>
                                     </div>
                                 </div>
