updated menu redirections

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
                                         <span data-title="Home">Home</span>
                                     </a>
                                 <li>
-                                    <a href="token.html" title="Token - BLITZ LABS">
-                                        <span data-title="Roadmap">Roadmap</span>
-                                    </a>
-                                <li>
-                                    <a href="staking.html" title="Staking - BLITZ LABS">
-                                        <span data-title="Team">Team</span>
-                                    </a>
-                                <li>
-                                    <a href="treasury.html" title="Treasury - BLITZ LABS">
+                                    <a href="#features" title="Token - BLITZ LABS">
                                         <span data-title="Features">Features</span>
                                     </a>
                                 <li>
-                                    <a href="https://docs.blitzlabs.io" title="BLITZ LABS Whitepaper" rel="nofollow" target="_blank">
+                                    <a href="#roadmap" title="Staking - BLITZ LABS">
+                                        <span data-title="Roadmap">Roadmap</span>
+                                    </a>
+                                <li>
+                                    <a href="#team" title="Treasury - BLITZ LABS">
+                                        <span data-title="Team">Team</span>
+                                    </a>
+                                <li>
+                                    <a href="#join" title="BLITZ LABS Whitepaper" rel="nofollow" target="_blank">
                                         <span data-title="Join Us">Join Us</span>
                                     </a>
                             </ul>
@@ -139,8 +139,8 @@
     <!--Menu from mobile browser-->
     <div class="popup-mobile-menu-bg">
         <button id="hambergerClose" onclick="toggleMenu()">
-            <img src="assets/hambergerClose-dark.svg" alt="" class="logo-dark">
-            <img src="assets/hambergerClose.svg" alt="" class="logo-light">
+            <img src="https://www.svgrepo.com/show/5186/menu.svg" alt="menu button" class="logo-dark">
+            <img src="https://www.svgrepo.com/show/5186/menu.svg" alt="menu button" class="logo-light">
         </button>
         <div class="popup-mobile-menu">
             <div class="container">
@@ -164,20 +164,20 @@
                                     <span data-title="Home">Home</span>
                                 </a>
                             <li>
-                                <a href="token.html" title="Token - BLITZ LABS">
-                                    <span data-title="Token">Roadmap</span>
+                                <a href="#features" title="Token - BLITZ LABS">
+                                    <span data-title="Features">Features</span>
                                 </a>
                             <li>
-                                <a href="staking.html" title="Staking - BLITZ LABS">
-                                    <span data-title="Staking">Team</span>
+                                <a href="#roadmap" title="Staking - BLITZ LABS">
+                                    <span data-title="Roadmap">Roadmap</span>
                                 </a>
                             <li>
-                                <a href="treasury.html" title="Treasury - BLITZ LABS">
-                                    <span data-title="Treasury">Features</span>
+                                <a href="#team" title="Treasury - BLITZ LABS">
+                                    <span data-title="Team">Team</span>
                                 </a>
                             <li>
-                                <a href="https://docs.blitzlabs.io" title="BLITZ LABS Whitepaper" rel="nofollow" target="_blank">
-                                    <span data-title="Whitepaper">Join Us</span>
+                                <a href="#join" title="BLITZ LABS Whitepaper" rel="nofollow" target="_blank">
+                                    <span data-title="Join Us">Join Us</span>
                                 </a>
                         </ul>
                     </div>
@@ -258,7 +258,7 @@
                 <hr class="rbt-separator m-0">
             </div>
         </div>
-        <div class="rn-service-area rn-section-gap">
+        <div id = "features" class="rn-service-area rn-section-gap">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -445,7 +445,7 @@
             </div>
         </div>
         <!--Roaadmap section-->
-        <div class="rwt-timeline-area rn-section-gap">
+        <div id = "roadmap" class="rwt-timeline-area rn-section-gap">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -635,7 +635,7 @@
             </div>
         </div>
         <!--Team section-->
-        <div class="rwt-team-area rn-section-gap">
+        <div id = "team" class="rwt-team-area rn-section-gap">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -716,7 +716,7 @@
             </div>
         </div>
         <!--Join Us section-->
-        <div class="rwt-brand-area rn-section-gap">
+        <div id = "join" class="rwt-brand-area rn-section-gap">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
