updated app description

--- a/index.html
+++ b/index.html
@@ -242,10 +242,11 @@
                                 <div>
                                     <div>
                                         <b>WeGoGym</b>
-                                        is a WEB3 collective dedicated to developing multi-chain tools, services, and products that make basic crypto activities such as, but not limited to, participating in presales, exchanging tokens, bridging, as simple as possible and without unnecessary complexity.<br>
+                                        is the ultimate workout app for fitness enthusiasts who want to experience the benefits of group workouts, with access to personalized training regimes, workout tracking, and a geolocal chat system. Our app takes it to the next level with daily adjustments to your training regime based on your body state, acting as your very own smart virtual personal trainer.<br>
                                         <br>
                                     </div>
-                                    <div>Our ultimate goal is to create a one-stop shop where users can conveniently compile all of their tasks in one site while paying the least fees possible.</div>
+                                    <div>Our geolocal chat system makes it easy for you to find gym partners and gymbros nearby, so you never have to work out alone again. Plus, with our feed and/or reels section, you can discover helpful gym content posted by fellow app users. We make sure that only relevant gym content is displayed in the app, so you can stay focused on your fitness journey without any distractions.<br><br></div>
+                                    <div>WeGoGym is more than just an app, it's a community of fitness enthusiasts who are dedicated to transforming their lives, one workout at a time. Download now and join the WeGoGym community!</div>
                                 </div>
                             </div>
                         </div>
