updated features description

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                             </h2>
                             <div>
                                 <p>
-                                    Below you will find products and services developed by WeGoGym that have already been released or on which we are currently working.
+                                    Discover the full range of features that WeGoGym has to offer, including group workouts, AI-based fitness coach, geolocal chat, workout tracking, exclusive gym content, access to a focused gym community, and so much more!
                             </div>
                         </div>
                     </div>
