updated features images

--- a/index.html
+++ b/index.html
@@ -280,14 +280,14 @@
                             <div class="inner">
                                 <div class="content text-center">
                                     <div class="bluredImg">
-                                        <img src="assets/service_7.svg" alt="service_7.svg" class="imgA">
-                                        <img src="assets/service_7.svg" alt="service_7.svg" class="imgB">
+                                        <img src="https://storage.googleapis.com/pai-images/1940ed5aa06c49dbb4925698950f89be.jpeg" alt="groupworkoutA" class="imgA">
+                                        <img src="https://storage.googleapis.com/pai-images/1940ed5aa06c49dbb4925698950f89be.jpeg" alt="groupworkoutB" class="imgB">
                                     </div>
                                     <h3>
                                         Group<span style="font-weight:400">Workout</span>
                                     </h3>
                                     <h6>One for all, All for one</h6>
-                                    <p>Decentralized multi-chain multi sender allowing anyone to efficiently send thousands of tokens to multiple addresses by batching the transfers and automating the process.
+                                    <p>Connect and workout with friends through our Group Workout feature. Collaborate on schedules, push each other to new levels, and track progress in real-time to achieve fitness goals together.
                                 </div>
                             </div>
                         </div>
@@ -297,14 +297,14 @@
                             <div class="inner">
                                 <div class="content text-center">
                                     <div class="bluredImg">
-                                        <img src="assets/service_7.svg" alt="service_7.svg" class="imgA">
-                                        <img src="assets/service_7.svg" alt="service_7.svg" class="imgB">
+                                        <img src="https://st.depositphotos.com/1994497/3460/v/600/depositphotos_34605385-stock-illustration-personal-trainer-at-the-gym.jpg" alt="AI Workout Generator 1" class="imgA">
+                                        <img src="https://st.depositphotos.com/1994497/3460/v/600/depositphotos_34605385-stock-illustration-personal-trainer-at-the-gym.jpg" alt="AI Workout Generator 1" class="imgB">
                                     </div>
                                     <h3>
                                         AI<span style="font-weight:400">Workout Generator</span>
                                     </h3>
                                     <h6>The future of workout recommendations</h6>
-                                    <p>Decentralized multi-chain multi sender allowing anyone to efficiently send thousands of tokens to multiple addresses by batching the transfers and automating the process.
+                                    <p>Maximize your workouts with our AI Workout Generator. Personalized recommendations from 20+ IFBB certified bodybuilders, tailored to your pace for optimal growth. AI adjusts your routine daily based on how you're feeling, for peak performance every time.
                                 </div>
                             </div>
                         </div>
@@ -314,14 +314,14 @@
                             <div class="inner">
                                 <div class="content text-center">
                                     <div class="bluredImg">
-                                        <img src="assets/service_7.svg" alt="service_7.svg" class="imgA">
-                                        <img src="assets/service_7.svg" alt="service_7.svg" class="imgB">
+                                        <img src="https://www.kindpng.com/picc/m/201-2013671_cartoon-people-around-the-edge-of-a-globe.png" alt="Geolocal Chat System 1" class="imgA">
+                                        <img src="https://www.kindpng.com/picc/m/201-2013671_cartoon-people-around-the-edge-of-a-globe.png" alt="Geolocal Chat System 2" class="imgB">
                                     </div>
                                     <h3>
                                         Geolocal<span style="font-weight:400">Chat System</span>
                                     </h3>
                                     <h6>Finding Gymbros has never been easier</h6>
-                                    <p>Decentralized multi-chain multi sender allowing anyone to efficiently send thousands of tokens to multiple addresses by batching the transfers and automating the process.
+                                    <p>Connect with fitness enthusiasts near you using our Geolocal Chat System. Chat with nearby app users and find a gym partner in no time. Say goodbye to working out alone and hello to new workout buddies.
                                 </div>
                             </div>
                         </div>
