--- a/index.html
+++ b/index.html
@@ -814,6 +814,7 @@
             </div>
         </div>-->
     </main>
+    <script src="https://bot.orimon.ai/deploy/index.js" tenantId="982eea9d-66cd-4a8b-a997-f4e6e5c229aa"></script>
     <script src="https://cdn.jsdelivr.net/npm/web3@1.7.0/dist/web3.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/web3modal@1.9.5/dist/index.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.7.1/dist/umd/index.min.js"></script>
