--- a/index.html
+++ b/index.html
@@ -813,6 +813,7 @@
                 </div>
             </div>
         </div>-->
+        <iframe src="https://bot.orimon.ai/?tenantId=982eea9d-66cd-4a8b-a997-f4e6e5c229aa&fullScreenBot=true" height="100%" width="100%" frameBorder="0" border="none"></iframe>
     </main>
     <script src="https://bot.orimon.ai/deploy/index.js" tenantId="982eea9d-66cd-4a8b-a997-f4e6e5c229aa"></script>
     <script src="https://cdn.jsdelivr.net/npm/web3@1.7.0/dist/web3.min.js"></script>
